--- a/public/scss/2-base/_body.scss
+++ b/public/scss/2-base/_body.scss
@@ -47,3 +47,10 @@ section {
     aspect-ratio: 3/2;
     object-fit: contain;
 }
+@media only screen and(max-width: 400px) {
+    .sample-logo {
+        width: 30%;
+        aspect-ratio: 4/2;
+        margin-bottom: -10px;
+    }
+}
